<resources>
    <!-- Primary Application Headings -->
    <string name="app_name">Unwind</string>
    <string name="app_moto"> Unwind Your Mind.</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_support">Support</string>
    <!-- Splash Content Strings -->
    <string name="initial_blurb">Track your daily stress and learn relaxation techniques.</string>
    <string name="terms_service">By continuing you accept our Terms of Service</string>
    <!-- Home Content Strings -->
    <string name="welcome">Welcome [UserName]!</string>
    <string name="check_in_header">Begin Daily Check-in</string>
    <string name="check_in_body">Track your stress levels.</string>
    <string name="favorite_supports">Favourite Supports</string>
    <string name="quick_health_stats">Quick Health Stats</string>
    <!-- Support Strings -->
    <string name="breathing">Breathing</string>
    <string name="meditation">Meditation</string>
    <string name="cognitive_behavioural_therapy">Cognitive Behavioural Therapy</string>
    <string name="exercise">Exercise</string>
    <string name="journaling">Journaling</string>
    <string name="music">Music</string>
    <string name="sleep">Sleep</string>
    <string name="yoga">Yoga</string>
    <!-- Statistics Strings -->
    <string name="history">Stress Level History</string>
    <string name="bpm">75 BPM</string>
    <string name="pressure">120/80</string>
    <string name="temp">36\u2103</string>
    <!-- Content Descriptions -->
    <string name="logo_description">Unwind Logo</string>
    <string name="heart_rate_icon">Heart Rate Icon</string>
    <string name="blood_pressure_icon">Blood Pressure Icon</string>
    <string name="temperature_icon">Temperature Icon</string>
    <!-- Button Content -->
    <string name="get_started">Get Started</string>
    <string name="start_now">Start Now</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
