<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/main"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/separator"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:cardElevation="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:backgroundTint="#00FFFFFF"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/check_in_header"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/main"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/check_in_body"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/outlinedButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/start_now"
                app:cornerRadius="8dp"
                app:strokeColor="@color/main"
                app:strokeWidth="4dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:cardElevation="0dp">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/favorite_supports"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/main"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignTop="@id/textView6"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="false"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/breathing"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/breathing"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/textView8"
                android:layout_centerHorizontal="true"
                android:background="@drawable/exercise"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/exercise"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignTop="@id/textView6"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="false"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/yoga"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/yoga"
                android:textColor="@color/text"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/separator"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:cardElevation="0dp">

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/quick_health_stats"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/main"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignTop="@id/imageView3"
                android:layout_marginHorizontal="36dp"
                android:contentDescription="@string/heart_rate_icon"
                android:src="@drawable/ic_heart_rate" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView2"
                android:layout_alignStart="@id/imageView2"
                android:layout_marginVertical="4dp"
                android:gravity="center_horizontal"
                android:text="@string/bpm"
                android:textColor="@color/main" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@id/textView9"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/blood_pressure_icon"
                android:src="@drawable/ic_blood_pressure" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView3"
                android:layout_alignStart="@id/imageView3"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="4dp"
                android:gravity="center_horizontal"
                android:text="@string/pressure"
                android:textColor="@color/main" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignTop="@id/imageView3"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="36dp"
                android:contentDescription="@string/temperature_icon"
                android:src="@drawable/ic_temperature" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_alignStart="@id/imageView4"
                android:layout_alignParentEnd="false"
                android:layout_marginVertical="4dp"
                android:gravity="center_horizontal"
                android:text="@string/temp"
                android:textColor="@color/main" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>